--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Matthew Anderson
-title: 
+title: Why I decided to study Software Engineering 
 header-img: img/home-bg.png
 email: anderson.matt1397@gmail.com
 copyright_name: Matthew Anderson
 description: > # this means to ignore newlines until "baseurl:"
-  
+  First Mile Blog
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  MatthewAnderson97
